Pengu is just fixing some minor things : )

--- a/docs/style.css
+++ b/docs/style.css
@@ -17,6 +17,6 @@ padding: 5em;
 body section{
 background-color: /*BurlyWood*/ #331a00;
 /* ebb: Looking for colors and color codes? Try the HTML color picker: https://www.w3schools.com/colors/colors_picker.asp */
-color: #ffffff;
+color: #EFEFEF;
 font-family: arial, helvetica, sans-serif;
 }
