--- a/docs/style.css
+++ b/docs/style.css
@@ -107,12 +107,12 @@ padding-right: 3vw;
 /*LINKS*/
 /* unvisited link */
 a:link {
-  color: #C600FF;
+  color: #C6FF00;
 }
 
 /* visited link */
 a:visited {
-  color: #C600FF;
+  color: #AAEB00;
 }
 
 /* mouse over link */
