--- a/docs/style.css
+++ b/docs/style.css
@@ -87,10 +87,16 @@ font-size: 2vw;
 
 /*IMAGES/GIFS*/
 img {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 25%;
+display: block;
+margin-left: auto;
+margin-right: auto;
+width: 25%;
+}
+
+img.thumbnail {
+width: 25vw;
+margin: 0vw;
+padding: 1vw;    
 }
 
 /*DIVISIONS*/
