--- a/docs/style.css
+++ b/docs/style.css
@@ -66,7 +66,6 @@ margin-left: 0vw;
 margin-right: 0vw;    
 }
 
-/*fffee4*/
 /*HEADERS*/
 h1{
 background-color: #1a0d00;
@@ -80,8 +79,8 @@ h2 {
 background-color: #FFF3CD;
 padding: 1em;
 text-align: center;
-margin-left: 20vw;
-margin-right: 20vw;
+margin-left: 0vw;
+margin-right: 0vw;
 font-size: 2vw;
 }
 
@@ -109,6 +108,16 @@ font-size: 2vw;
 padding: 1vw;
 padding-left: 3vw;
 padding-right: 3vw;
+}
+
+/* Flex Container */
+div.UI{
+display: flex;
+flex-direction: row;
+flex-wrap: wrap;
+
+    
+    
 }
 
 /*LINKS*/
